# FluidSwirlPlugin

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.bat
.claude/: settings.local.json
FluidSwirl.ofx.bundle/Contents/Win64/: FluidSwirl.ofx
examples/: BoatWakeExample.md
src/: FluidSwirlGPU.cu  FluidSwirlOptimized.hpp  FluidSwirlPlugin.cpp
